RESOLVED FIXED12668
REGRESSION: underline not visible for the international input inline hole in most text fields
https://bugs.webkit.org/show_bug.cgi?id=12668
Summary REGRESSION: underline not visible for the international input inline hole in ...
Maciej Stachowiak
Reported 2007-02-06 23:35:07 PST
2006-12-19 22:14:29 Masayuki Shibatani: * SUMMARY Underline should be displayed with typing Kotoeri input method. However the under line isn't displayed on many of fields. I see the under line still can be displayed on some fields. I couldn't isolate which fields are wrong. * STEPS TO REPRODUCE 1. Install Leopard 9A325 as English primary, Japanese country region and Kotoeri as default keyboard. 2. Confirm expected behavior. 2-1. Open URL http://www.apple.co.jp. 2-2. Select Hiragana input source from Text Input Menu. 2-3. Click search field in the web content. 2-4. Type 'hakaru'. Actual (Expected): See 'はかる' with underline. 3. Reproduce wrong behavior. 3-1. Open URL http://www.google.co.jp. (I can also see the symptom at subject field on DotMac Mail.) 3-2. Try same thing as 2-2 to 2-4 . * RESULTS Actual: There is no under line. Underline is essential item for recognition where can I convert with kana kanji conversion on Kotoeri or other 3rd party input methods. Expected: Should display under line when typing with Kotoeri input methods. 2006-12-20 19:53:48 Stephanie Lewis: Occurs in Leopard 9A325. This is a regression from Safari 2.0.4 2007-01-02 15:06:36 Stephanie Lewis: Safari BRB Reviewed 2007-01-15 14:41:47 Alice Liu: Safari blocker reviewed <rdar://problem/4893344>
Attachments
Maciej Stachowiak
Comment 1 2007-02-07 05:09:39 PST
*** Bug 11107 has been marked as a duplicate of this bug. ***
Darin Adler
Comment 2 2007-02-10 22:33:57 PST
The problem is that the underline is drawn, but clipped. I'm going to ask Hyatt how to best address this -- the problem is that we need to be able to draw in the area that's currently part of vertical padding.
Darin Adler
Comment 3 2007-02-12 15:47:35 PST
Committed revision 19587.
Note You need to log in before you can comment on or make changes to this bug.