WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp
@@ -423,12 +423,11 @@ void GraphicsContext::clearFocusRingClip()
     // to work around bugs in Mac focus ring clipping
 }
 
-void GraphicsContext::drawLineForText(const IntPoint& point, int yOffset, int width, bool printing)
+void GraphicsContext::drawLineForText(const IntPoint& origin, int width, bool printing)
 {
     if (paintingDisabled())
         return;
 
-    IntPoint origin = point + IntSize(0, yOffset + 1);
     IntPoint endPoint = origin + IntSize(width, 0);
     drawLine(origin, endPoint);
 }
