WebCore/platform/graphics/qt/GraphicsContextQt.cpp
@@ -569,13 +569,11 @@ void GraphicsContext::clearFocusRingClip()
     m_data->focusRingClip = IntRect();
 }
 
-void GraphicsContext::drawLineForText(const IntPoint& point, int yOffset,
-                                      int width, bool printing)
+void GraphicsContext::drawLineForText(const IntPoint& origin, int width, bool printing)
 {
     if (paintingDisabled())
         return;
 
-    IntPoint origin = point + IntSize(0, yOffset + 1);
     IntPoint endPoint = origin + IntSize(width, 0);
     drawLine(origin, endPoint);
 }
